<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.android.babbageco.MainActivity">

        <ImageView
            android:id="@+id/analytical_engine_image_view"
            android:layout_width="wrap_content"
            android:layout_height="245dp"
            android:contentDescription="@string/analytical_engine_picture"
            android:scaleType="centerCrop"
            android:src="@drawable/analytical_engine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/babbage_and_co_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/company_name_heading"
            android:paddingBottom="4dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:text="@string/babbage_and_co"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/analytical_engine_image_view" />

        <TextView
            android:id="@+id/company_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/company_description"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="@string/babbage_and_co_is_a_british_multinational_technology_company_headquartered_in_london_england"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/babbage_and_co_text_view"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/location_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/location_image"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_description"
            app:layout_constraintVertical_bias="0.0"
            android:src="@drawable/ic_location_on_black_18dp" />

        <TextView
            android:id="@+id/location_text_view"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:contentDescription="@string/location_text"
            android:padding="8dp"
            android:text="@string/london_united_kingdom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/location_image_view"
            app:layout_constraintTop_toBottomOf="@+id/company_description"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/call_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/call_image"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_image_view"
            app:layout_constraintVertical_bias="0.0"
            android:src="@drawable/ic_call_black_18dp" />

        <TextView
            android:id="@+id/call_text_view"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:contentDescription="@string/call_text"
            android:padding="8dp"
            android:text="@string/_44_1234_xxx_xxx"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/call_image_view"
            app:layout_constraintTop_toBottomOf="@+id/location_text_view"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/email_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/email_image"
            android:padding="8dp"
            android:src="@drawable/ic_email_black_18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/call_image_view"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/email_text_view"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:contentDescription="@string/email_text"
            android:padding="8dp"
            android:text="@string/suspended_century_long_backlog"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/email_image_view"
            app:layout_constraintTop_toBottomOf="@+id/call_text_view"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/founder_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/founder_image"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_image_view"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_face_black_18dp" />

        <TextView
            android:id="@+id/founder_text_view"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:contentDescription="@string/founder_text"
            android:padding="8dp"
            android:text="@string/charles_babbage_kh_frs"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/founder_image_view"
            app:layout_constraintTop_toBottomOf="@+id/email_text_view"
            app:layout_constraintVertical_bias="0.0" />

    </android.support.constraint.ConstraintLayout>

 </ScrollView>